# frustra

./: Cargo.toml  README.md  shell.nix
client/: Cargo.toml
client/src/: main.rs  math.rs  renderer.rs
client/src/renderer/: data.rs  lighting.rs  mesh.rs  mod.rs
client/src/renderer/shaders/: crosshair_vert.glsl  frag.glsl  lighting.comp  vert.glsl
client/src/world/: mod.rs  tess.rs
frustra-front/: Cargo.toml  README.md
frustra-front/src/: main.rs
