[package]
name = "frustra-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
raw-window-handle = "0.5"
smallvec = "1.13.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28"
